--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "nbdime-conflicts": {
      "local_diff": [
@@ -67,7 +67,94 @@
      "hide"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Philosopher:400,700,400italic,700italic' rel='stylesheet' type='text/css'>\n",
+       "\n",
+       "<style>\n",
+       "\n",
+       "#notebook_panel { /* main background */\n",
+       "    background: #111;\n",
+       "    color: #f6f6f6;\n",
+       "}\n",
+       "\n",
+       "div #notebook { /* centre the content */\n",
+       "    background: #888; /* white background for content */\n",
+       "    margin: auto;\n",
+       "    padding-left: 0.1em;\n",
+       "}\n",
+       "\n",
+       "#notebook li { /* More space between bullet points */\n",
+       "margin-top:0.4em;\n",
+       "}\n",
+       "\n",
+       "/* draw border around running cells */\n",
+       "div.cell.border-box-sizing.code_cell.running { \n",
+       "    border: 3px solid #111;\n",
+       "}\n",
+       "\n",
+       "/* Put a solid color box around each cell and its output, visually linking them together */\n",
+       "div.cell.code_cell {\n",
+       "    background-color: #f8f8ec;\n",
+       "    border-radius: 10px; /* rounded borders */\n",
+       "    padding: 0.1em;\n",
+       "    margin-top: 1em;\n",
+       "}\n",
+       "\n",
+       "div.text_cell_render{\n",
+       "    font-family: 'Garamond', serif;\n",
+       "    line-height: 130%;\n",
+       "    font-size: 135%;\n",
+       "    width:auto;\n",
+       "    margin-left:auto;\n",
+       "    margin-right:auto;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "/* Formatting for header cells */\n",
+       ".text_cell_render h1 {\n",
+       "    font-family: 'Helvetica', sans-serif;\n",
+       "    font-weight: 350;\n",
+       "    font-size: 40pt;\n",
+       "    line-height: 100%;\n",
+       "    margin-bottom: 0.1em;\n",
+       "    margin-top: 0.1em;\n",
+       "    display: block;\n",
+       "}\t\n",
+       ".text_cell_render h2 {\n",
+       "    font-family: 'Helvetica', sans-serif;\n",
+       "    font-weight: 500;\n",
+       "    font-size: 24pt;\n",
+       "    line-height: 100%;\n",
+       "    margin-bottom: 0.1em;\n",
+       "    margin-top: 0.1em;\n",
+       "    display: block;\n",
+       "}\t\n",
+       "\n",
+       ".text_cell_render h3 {\n",
+       "    font-family: 'Helvetica', sans-serif;\n",
+       "    font-weight: 500;\n",
+       "    font-size: 18pt;\n",
+       "    margin-top:12px;\n",
+       "    margin-bottom: 3px;\n",
+       "}\n",
+       "\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.core.display import HTML\n",
     "css_file = './custom.css'\n",
@@ -389,6 +476,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Comment: \n",
+    "\n",
+    "Why is indentation wrong for this cell and the next when the css file is used?\n",
+    "\n",
+    "Suggest changing list above to:\n",
+    "\n",
+    " - Sound waves (acoustics)\n",
+    " - Gravity waves in shallow water\n",
+    " - Traffic flow\n",
+    " - Compressible gas dynamics\n",
+    " - Elastic waves (e.g. seismology)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Godunov's method\n",
     "\n",
     " - Add a brief description of Godunov's method and how it uses Riemann solutions.\n",
@@ -460,14 +564,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   },
   "toc": {
    "nav_menu": {},
