RJL comments on shallow_water_approximate_solvers

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -476,8 +476,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comment: \n",
-    "\n",
+    "### RJL comment: \n",
+    "<font color='red'>\n",
     "Why is indentation wrong for this cell and the next when the css file is used?\n",
     "\n",
     "Suggest changing list above to:\n",
