--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -477,7 +477,7 @@
    "metadata": {},
    "source": [
     "### RJL comment: \n",
-    "<font color='red'>\n",
+    "    \n",
     "Why is indentation wrong for this cell and the next when the css file is used?\n",
     "\n",
     "Suggest changing list above to:\n",
@@ -486,7 +486,9 @@
     " - Gravity waves in shallow water\n",
     " - Traffic flow\n",
     " - Compressible gas dynamics\n",
-    " - Elastic waves (e.g. seismology)"
+    " - Elastic waves (e.g. seismology)\n",
+    " \n",
+    "==========="
    ]
   },
   {
