--- a/shallow_water_approximate_solvers.ipynb
+++ b/shallow_water_approximate_solvers.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### RJL comment: \n",
+    "\n",
+    "change title to Shallow_etc with cap S for consistency?\n",
+    "\n",
+    "==========="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Things that could be added:\n",
     "\n",
     " - Comparisons between Roe and HLL\n",
@@ -68,7 +79,9 @@
    "source": [
     "### RJL comment:\n",
     "\n",
-    "<font color='red'>I like this new presentation."
+    "I like this new presentation.\n",
+    "\n",
+    "==========="
    ]
   },
   {
@@ -305,10 +318,12 @@
    "metadata": {},
    "source": [
     "### RJL comment: \n",
-    "<font color='red'>\n",
+    "\n",
     "We need legends to remind the reader what the different colors mean.\n",
     "\n",
-    "Should the phase plot below be put before the above plots?  Might make it easier to explain the colors?\n"
+    "Should the phase plot below be put before the above plots?  Might make it easier to explain the colors?\n",
+    "\n",
+    "==========="
    ]
   },
   {
@@ -1474,7 +1489,9 @@
    "source": [
     "### RJL comment:\n",
     "\n",
-    "<font color='red'>Impossible to tell that there's a red curve under the right-going green curve in the x-t plot. Confusing."
+    "Impossible to tell that there's a red curve under the right-going green curve in the x-t plot. Confusing.\n",
+    "\n",
+    "==========="
    ]
   },
   {
@@ -2751,10 +2768,12 @@
    "metadata": {},
    "source": [
     "### RJL comment:\n",
-    "<font color='red'>\n",
+    "\n",
     "Need legend explaining that black = exact, yellow = without efix, green = with efix\n",
     "\n",
-    "Is it confusing that above we plot hu vs. x but in the phase plane we plot u vs. h (rather than hu vs. h).  In general should we plot h-hu plane?"
+    "Is it confusing that above we plot hu vs. x but in the phase plane we plot u vs. h (rather than hu vs. h).  In general should we plot h-hu plane?\n",
+    "\n",
+    "==========="
    ]
   },
   {
@@ -7604,8 +7623,10 @@
    "metadata": {},
    "source": [
     "### RJL comment:\n",
-    "<font color='red'>\n",
-    "This choice of $s_1$ and $s_2$ using the Roe averages is actually the HLLE solver.  The original HLL solver did not use this, but just recommended using lower and upper bounds on all characteristics speeds."
+    "\n",
+    "This choice of $s_1$ and $s_2$ using the Roe averages is actually the HLLE solver.  The original HLL solver did not use this, but just recommended using lower and upper bounds on all characteristics speeds.\n",
+    "\n",
+    "==========="
    ]
   },
   {
@@ -11189,8 +11210,10 @@
    "metadata": {},
    "source": [
     "### RJL comment:\n",
-    "<font color='red'>\n",
-    "Is this true for all HLL solvers? Presumably depends on choice of $s_1$ and $s_2$.  It's true for HLLE."
+    "\n",
+    "Is this true for all HLL solvers? Presumably depends on choice of $s_1$ and $s_2$.  It's true for HLLE.\n",
+    "\n",
+    "==========="
    ]
   },
   {
