--- a/Traffic_flow.ipynb
+++ b/Traffic_flow.ipynb
@@ -11,7 +11,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "tags": [
      "hide"
     ]
@@ -123,7 +122,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "tags": [
      "hide"
     ]
@@ -156,6 +154,17 @@
     "interact(jam, rho_l=FloatSlider(min=0.,max=0.9,value=0.2,\n",
     "                                description=r'$\\rho_l$'),\n",
     "         t=FloatSlider(min=0.,max=1.,value=0.2));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RJL comment:\n",
+    "\n",
+    "Why doesn't dashed line at proper t show up in x-t plot, as it does in similar plots below?\n",
+    "\n",
+    "==========="
    ]
   },
   {
@@ -285,6 +294,17 @@
     "         rho_r=FloatSlider(min=0.,max=0.9,value=0.,\n",
     "                           description=r'$\\rho_r$'),\n",
     "         t=FloatSlider(min=0.,max=1.));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RJL comment:\n",
+    "\n",
+    "The plots below have a very different look than all other plots in the notebooks.  Can we make the more consistent?\n",
+    "\n",
+    "==========="
    ]
   },
   {
