Improve final nonconvex demo to add sliders for ql and qr

--- a/Nonconvex_scalar.ipynb
+++ b/Nonconvex_scalar.ipynb
@@ -76,11 +76,13 @@
     "mpl.rcParams['font.size'] = 10\n",
     "figsize =(8,4)\n",
     "mpl.rcParams['figure.figsize'] = figsize\n",
+    "mpl.rcParams['figure.dpi'] = 100\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display\n",
     "from ipywidgets import widgets, fixed\n",
     "from ipywidgets import interact\n",
+    "#from utils.jsanimate_widgets import interact\n",
     "from utils import riemann_tools\n",
     "from exact_solvers import nonconvex\n",
     "from exact_solvers import nonconvex_demos"
@@ -362,7 +364,7 @@
    "source": [
     "## Yet another example\n",
     "\n",
-    "Here's another example. Note the collection of shock and rarefaction waves that result from this."
+    "Here's another example. Note the collection of shock and rarefaction waves that result from this.  In the notebook you can adjust $q_l$ and $q_r$.  Notice how the structure of the solution changes as you vary them.  What do you think the Riemann solution looks like if you switch the left and right states?  Check if you are right."
    ]
   },
   {
@@ -372,13 +374,13 @@
    "outputs": [],
    "source": [
     "f = lambda q: 0.25*(1. - q)*np.sin(1.5*q)\n",
-    "q_left = -3.2\n",
-    "q_right = 3.6\n",
     "\n",
-    "plot_function = nonconvex_demos.make_plot_function(f, q_left, q_right, -3, 3)\n",
+    "plot_function = nonconvex_demos.make_plot_function_qsliders(f)\n",
     "\n",
     "interact(plot_function, \n",
     "         t=widgets.FloatSlider(value=0.,min=0.,max=.9),\n",
+    "         q_left=widgets.FloatSlider(value=-3.5,min=-4,max=4),\n",
+    "         q_right=widgets.FloatSlider(value=3.5,min=-4,max=4),\n",
     "         fig=fixed(0));"
    ]
   },
@@ -386,10 +388,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What does the Riemann solution look like if you switch the left and right states in this example?\n",
-    "\n",
     "Experiment with this and other flux functions in this notebook!  But please note that the plotting functions, as written, may break down if you try an example with too many oscillations in the flux."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
