--- a/Shallow_water.ipynb
+++ b/Shallow_water.ipynb
@@ -637,7 +637,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shallow_water.plot_riemann_SW(h_l=1, h_r=0, u_l=0, u_r=0, particle_paths=False)"
+    "shallow_water.plot_riemann_SW(h_l=1, h_r=0, u_l=0, u_r=0, \n",
+    "                              particle_paths=False)"
    ]
   },
   {
