new original after updates to a couple notebooks

--- a/Approximate_solvers.ipynb
+++ b/Approximate_solvers.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II.  Approximate Riemann Solvers"
+    "# Introduction to Approximate Riemann Solvers"
    ]
   },
   {
