--- a/Euler_approximate.ipynb
+++ b/Euler_approximate.ipynb
@@ -449,7 +449,7 @@
     "\\end{align}\n",
     "\n",
     "Recall that once we have chosen these two wave speeds, conservation dictates the value of the intermediate state:  \n",
-    "\\begin{align}  \\label{SWA:hll_middle_state}\n",
+    "\\begin{align}  \\label{EA:hll_middle_state}\n",
     "q_m = \\frac{f(q_r) - f(q_\\ell) - s_2 q_r + s_1 q_\\ell}{s_1 - s_2}.\n",
     "\\end{align}"
    ]
