--- a/Preface.ipynb
+++ b/Preface.ipynb
@@ -19,9 +19,7 @@
     "\n",
     "It is assumed that the reader has some knowledge of hyperbolic problems in advance.  This book is intended to supplement rather than replace standard textbooks on the theory and numerical solution of hyperbolic PDEs.  It should also be useful as a tool for students or researchers seeking to better understand the nature of Riemann solutions to a particular hyperbolic system.\n",
     "\n",
-    "The notation generally follows that of <cite data-cite=\"fvmhp\"><a href=\"riemann.html#fvmhp\">(LeVeque 2002)</a></cite>, which covers most of the topics included here and many others. We have kept citations to a minimum in these notebooks, but there are a wealth of other books and papers available in the literature.\n",
-    "\n",
-    "In particular, some other books that have substantial discussion of Riemann problems and related topics include \n",
+    "The notation generally follows that of <cite data-cite=\"fvmhp\"><a href=\"riemann.html#fvmhp\">(LeVeque 2002)</a></cite>, which covers most of the topics included here and many others. We have kept citations to a minimum in these notebooks, but there are a wealth of other books and papers available in the literature.  In particular, some other books that have substantial discussion of Riemann problems and related topics include \n",
     "<cite data-cite=\"lax:cbms\"><a href=\"riemann.html#lax:cbms\">(Lax 1972)</a></cite>, \n",
     "<cite data-cite=\"rjl:eth\"><a href=\"riemann.html#rjl:eth\">(LeVeque 1990)</a></cite>, \n",
     "<cite data-cite=\"god-rav\"><a href=\"riemann.html#kgod-rav\">(Godlewski and Raviart 1996)</a></cite>, \n",
@@ -63,7 +61,7 @@
     "In order to run the code in the Jupyter notebook version of the book, you will need to have certain tools and libraries installed on a computer, either locally or in the cloud.  There are multiple convenient ways to do this.\n",
     "\n",
     "  - On your own computer: follow the [installation instructions](https://github.com/clawpack/riemann_book#installation)\n",
-    "  - With Docker: follow [these instructions](https://github.com/clawpack/riemann_book/blob/master/Docker.md) to use the `Dockerfile` that is included in the [Github repository](https://github.com/clawpack/riemann_book).\n",
+    "  - With Docker: follow [these instructions](https://github.com/clawpack/riemann_book/blob/master/Docker.md) to use the `Dockerfile` that is included in the Github repository.\n",
     "  - With Binder: The cloud service [binder](https://mybinder.org/) allows you to start up a notebook server running notebooks from any Git repository (assuming it specifies the dependencies properly).  You can try it out for these notebooks at [this link](https://mybinder.org/v2/gh/clawpack/riemann_book/master).\n",
     "    This should start up a notebook server on a [Jupyterhub](https://jupyterhub.readthedocs.io/en/latest/) that lets you execute all the notebooks in your browser with no local installation of the notebooks or dependencies required."
    ]
@@ -80,9 +78,9 @@
     "\n",
     "Part II introduces approximate Riemann solvers, which are an essential tool in numerical algorithms for hyperbolic PDEs.  This part discusses the most important approaches to such solvers: from simple Lax-Friedrichs and HLL solvers to linearizations, including Roe solvers.  Potential issues with these methods (such as the need for entropy fixes and lack of positivity) are addressed.  Part II concludes with comparisons of canonical approximate solvers for the shallow water and Euler systems.\n",
     "\n",
-    "The [Index](Index.ipynb) notebook contains links to the chapters of Parts I and II.\n",
+    "The [Index.ipynb](Index.ipynb) notebook contains links to the chapters of Parts I and II.\n",
     "\n",
-    "The remaining parts are still a work in progress at the time of this writing, and are not included in the print or PDF version of the book.  They can be found in the [Github repository](https://github.com/clawpack/riemann_book) and additional topics may be added at a later date.  \n"
+    "The remaining parts are still a work in progress at the time of this writing, and are not included in the print or PDF version of the book.  They can be found in the Github repository and additional topics may be added at a later date.  \n"
    ]
   },
   {
@@ -93,8 +91,7 @@
     "\n",
     "Although the primary goal of this book is to present the mathematics of Riemann solvers in a novel and educational manner, an additional goal from the beginning has been to explore the use of Jupyter notebooks for this sort of publishing venture, and to help popularize Jupyter notebooks within the applied mathematics community.  We believe that notebooks are a great tool for both teaching and research, and an exciting new format for publishing.  It has been an interesting challenge to figure out ways to present material that works well in the notebooks and that also translates into [html files](http://www.clawpack.org/riemann_book/html/Index.html) and a physical book, and we hope that our experiences not only help convey the subject matter but also can serve as a template for other publishing projects or as an impetus to develop better approaches.\n",
     "\n",
-    "All of the notebooks and associtated Python code are of course available in the [github repository](https://github.com/clawpack/riemann_book), and in addition we have written some \n",
-    "[wiki pages](https://github.com/clawpack/riemann_book/wiki) on various other tools we have found useful in developing this book.  In particular, [bookbook](https://github.com/takluyver/bookbook) has been used in converting notebooks to latex/pdf files, and tools for working with notebooks such as [nbdime](https://github.com/jupyter/nbdime) and [nbstripout](https://github.com/kynan/nbstripout) have been invaluable for helping to manage modifications to notebooks in the context of [git](https://git-scm.com/).  Without git and github this project would have never come together, since the three authors have been employed on three different continents for most this project, and many discussions about how to do things, what to include, how to edit notebooks, etc. have taken place via pull requests on github.  As of this writing there are 183 [closed pull requests](https://github.com/clawpack/riemann_book/pulls?q=is%3Apr+is%3Aclosed) on this repository, which provide a history of many of our discussions and decisions.\n",
+    "All of the notebooks and associtated Python code are of course available in the github repository, and in addition we have written some [wiki pages](https://github.com/clawpack/riemann_book/wiki) on various other tools we have found useful in developing this book.  In particular, [bookbook](https://github.com/takluyver/bookbook) has been used in converting notebooks to latex/pdf files, and tools for working with notebooks such as [nbdime](https://github.com/jupyter/nbdime) and [nbstripout](https://github.com/kynan/nbstripout) have been invaluable for helping to manage modifications to notebooks in the context of [git](https://git-scm.com/).  Without git and github this project would have never come together, since the three authors have been employed on three different continents for most this project, and many discussions about how to do things, what to include, how to edit notebooks, etc. have taken place via pull requests on github.  As of this writing there are 183 [closed pull requests](https://github.com/clawpack/riemann_book/pulls?q=is%3Apr+is%3Aclosed) on this repository, which provide a history of many of our discussions and decisions.\n",
     "\n",
     "Numerous other books and lecture notes have been written that make extensive use of Jupyter notebooks, and they are also becoming increasingly popular as a supplement to research publications.  See the [Gallery of interesting Jupyter notebooks](https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks) for other examples and inspiration.  We hope that more applied mathematicians will explore this platform for future publications."
    ]
