--- a/riemann.bib
+++ b/riemann.bib
@@ -316,7 +316,7 @@ doi = {10.1137/1.9780898719420},
   publisher = {Birkh{\"a}user-Verlag}
 }
 
-@Book{kroener,
+@Book{kroener1997,
   author = {D. Kr{\"o}ner},
   title = {Numerical Schemes for Conservation Laws},
   year = {1997},
