fix sentence about phase plane in Introduction

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -379,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below (in the notebook version, or on [this webpage](http://www.clawpack.org/riemann_book/phase_plane/acoustics_small.html)). \n",
+    "Below, in the notebook version, or on [this webpage](http://www.clawpack.org/riemann_book/phase_plane/acoustics_small.html),\n",
     "we show the phase plane and the location of $q_m$ relative to $q_\\ell$ and $q_r$.  You can drag the left and right states around to see how this changes the solution.  Also shown in the other two plots are the pressure $p(x,t)$ and velocity $u(x,t)$ at one particular time $t=1$ for this Riemann solution."
    ]
   },
